--- a/conf/resnet_fine.conf
+++ b/conf/resnet_fine.conf
@@ -2,6 +2,7 @@ model {
     use_encoder = True
     use_global_encoder = False
     use_xyz = True
+    canon_xyz = False
     # Positional encoding
     use_code = True
     code {
