--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,8 +1,19 @@
+# Single-view only base model
+# (Not used in experiments; resnet_fine_mv.conf inherits)
 model {
+    # Condition on local encoder
     use_encoder = True
+
+    # Condition also on a global encoder?
     use_global_encoder = False
+    
+    # Use xyz input instead of just z
+    # (didn't ablate)
     use_xyz = True
+    
+    # Canonical space xyz (default view space)
     canon_xyz = False
+
     # Positional encoding
     use_code = True
     code {
@@ -11,10 +22,14 @@ model {
         include_input = True
     }
 
-    # Apply positional encoding to viewdirs (only if use_code)
-    use_code_viewdirs = True
+    # View directions
+    use_viewdirs = True
+    # Apply pos. enc. to viewdirs?
+    use_code_viewdirs = False
+
+    # MLP architecture
     mlp_coarse {
-        type = resnet
+        type = resnet  # Can change to mlp
         n_blocks = 3
         d_hidden = 512
     }
@@ -23,6 +38,8 @@ model {
         n_blocks = 3
         d_hidden = 512
     }
+
+    # Encoder architecture
     encoder {
         backbone = resnet34
         pretrained = True
@@ -30,33 +47,43 @@ model {
     }
 }
 renderer {
-    n_coarse = 32
-    n_fine = 64
+    n_coarse = 64
+    n_fine = 32
+    # Try using expected depth sample
+    n_fine_depth = 16
+    # Noise to add to depth sample
+    depth_std = 0.01
+    # Decay schedule, not used
     sched = []
 }
 loss {
+    # RGB losses coarse/fine
     rgb {
         use_l1 = False
     }
     rgb_fine {
         use_l1 = False
     }
+    # Alpha regularization (disabled in final version)
     alpha {
         # lambda_alpha = 0.0001
         lambda_alpha = 0.0
         clamp_alpha = 100
         init_epoch = 5
     }
+    # Coarse/fine weighting (nerf = equal)
     lambda_coarse = 1.0  # loss = lambda_coarse * loss_coarse + loss_fine
     lambda_fine = 1.0  # loss = lambda_coarse * loss_coarse + loss_fine
 }
 train {
+    # Training 
     print_interval = 2
     save_interval = 50
     vis_interval = 100
     eval_interval = 50
 
     # Accumulating gradients. Not really recommended.
+    # 1 = disable
     accu_grad = 1
 
     # Number of times to repeat dataset per 'epoch'
