--- a/conf/default_mv.conf
+++ b/conf/default_mv.conf
@@ -1,19 +1,14 @@
-include required("resnet_fine.conf")
-renderer {
-    n_coarse = 64
-    n_fine = 32
-    # Try using expected depth sample
-    n_fine_depth = 16
-    depth_std = 0.01
-    sched = []
-}
-
+# Main multiview supported config
+include required("default.conf")
 model {
-    use_code_viewdirs = False
+    # MLP architecture
+    # Adapted for multiview
+    # Possibly too big
     mlp_coarse {
         type = resnet
         n_blocks = 5
         d_hidden = 512
+        # Combine after 3rd layer by average
         combine_layer = 3
         combine_type = average
     }
