Fixed weird bug where focal length was flipped each encode() call if in (fx, fy) format

--- a/expconf.conf
+++ b/expconf.conf
@@ -1,4 +1,5 @@
-# List experiments here
+# To save typing, this file offers a way to associate
+# default config files (-c) and datase directories (-D) with expnames 
 config {
     # expname = config_file_path
     # path should be under <project root>/conf/
