Added training code and documentation. Still missing an experiment.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
-__pycache__
-*.pyc
+# Editors
+.vscode/
+.idea/
+
+# Vagrant
+.vagrant/
+
+# Mac/OSX
+.DS_Store
+
+# Windows
+Thumbs.db
+
+# Source for the following rules: https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 *.swp
+
+# Custom
+checkpoints/
+visuals/
+logs/
+scripts/detectron2
