adding necessary changes for multi object training

--- a/expconf.conf
+++ b/expconf.conf
@@ -8,6 +8,7 @@ config {
     srn_chair = exp/srn.conf
     srn_car = exp/srn.conf
     dtu = exp/dtu.conf
+    multi_obj = exp/multi_obj.conf
 }
 
 datadir {
